--- a/angular.json
+++ b/angular.json
@@ -60,6 +60,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
           }
         },
@@ -71,7 +79,12 @@
           "configurations": {
             "production": {
               "browserTarget": "fluper-test:build:production"
+            },
+            "development": {
+              "browserTarget": "fluper-test:build:development"
             }
+          },
+          "defaultConfiguration": "development"
           }
         },
         "extract-i18n": {
